--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Место</title>
   </head>
-  <body class="root">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body>
+    <div class="root">
+      <noscript>You need to enable JavaScript to run this app.</noscript>
+    </div>
   </body>
 </html>
